# BoxHunt

./: .cursorignore  .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  env.example  example.py  pyproject.toml
.cursor/: settings.json
boxhunt/: api_clients.py  config.py  crawler.py  gui_main.py  image_processor.py  main.py  pysidedeploy.spec  storage.py  website_client.py
boxhunt/box3d/: __init__.py  generator.py
boxhunt/gui/: __init__.py  box3d_viewer.py  classification.py  crop_preview.py  export_dialog.py  file_browser.py  image_annotation.py  log_widget.py  logger.py  main_window.py  project_manager.py  utils.py
